<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gedolim Yartzeits</string>
    <string name="internet_connection_error_text">Internet connection not available.</string>
    <string name="txt_please_wait">Please wait...</string>
    <string name="txt_set">Set</string>
    <string name="txt_cancel">Cancel</string>
    <string name="set_date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="splash_hebrew_msg">לעילוי נשמת מרת פריחה בת אברהם</string>
    <string name="splash_english_msg">Yasher Koach Manny Saltiel for all the Info</string>
    <string name="search_names">Search names</string>
    <string name="sponsor">Sponsor</string>
    <string name="suggest">Suggest</string>
    <string name="event_not_found">Event not found yet!</string>
    <string name="search_by_names">Search by Name</string>
    <string name="go_to_today">Go to Today</string>
    <string name="not_any_event_in_selected_date">Not any event available in selected date</string>

    <!--    App rating dialog   -->
    <string name="rate_dialog_title">Enjoying the App?</string>
    <string name="rate_dialog_message">Would you mind taking a few seconds to rate our app?</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No, Thanks</string>

    <string-array name="array_months">
        <item>Nisan</item>
        <item>Iyyar</item>
        <item>Sivan</item>
        <item>Tamuz</item>
        <item>Av</item>
        <item>Elul</item>
        <item>Tishrei</item>
        <item>Cheshvan</item>
        <item>Kislev</item>
        <item>Tevet</item>
        <item>Shvat</item>
        <item>Adar1</item>
        <item>Adar2</item>
    </string-array>

    <string-array name="progerss">
        <item>12</item>
        <item>25</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sponsor_heading_text">A lifetime opportunity!</string>
    <string name="sponsor_details">Sponsor a Gadol for only $54. Your sponsorship is lifelong on the app. Choose the sponsorship information to post on the Gadols Yartzeit page.</string>

</resources>