<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topbar_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView_alert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="@dimen/margin_16"
            android:text="@string/select_date"
            android:textColor="@color/color_white"
            android:textSize="@dimen/textsize_16"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/closeBtn"
            android:layout_width="@dimen/margin_50"
            android:layout_height="@dimen/margin_50"
            android:padding="@dimen/margin_15"
            android:src="@drawable/cross" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_select_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layEditName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_150"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin_10"
            android:paddingRight="@dimen/margin_10"
            android:paddingTop="@dimen/margin_10">

            <com.saqibdb.YahrtzeitsOfGedolim.customDatePicker.LoopView
                android:id="@+id/picker_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false" />

            <com.saqibdb.YahrtzeitsOfGedolim.customDatePicker.LoopView
                android:id="@+id/picker_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:focusable="false" />

            <com.saqibdb.YahrtzeitsOfGedolim.customDatePicker.LoopView
                android:id="@+id/picker_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:focusable="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layEditName"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_8">

            <TextView
                android:id="@+id/textView_confirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_40"
                android:layout_marginRight="@dimen/margin_5"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/txt_set"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:textSize="@dimen/textsize_14" />

            <TextView
                android:id="@+id/textView_cancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_40"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_weight="1"
                android:background="@color/color_pink"
                android:gravity="center"
                android:text="@string/txt_cancel"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:textSize="@dimen/textsize_14" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>